# Studia

./: README.md
sem1/: README.md
sem1/pp_proj1_go/: GO.cpp  lib.cpp  lib.h
sem1/pp_proj2_spyhunter/: car.cpp  car.h  config.h  main.cpp  tile.cpp  tile.h  tools.cpp  tools.h
sem1/wai_hih_proj1_strona/: index.html  p2_article1.html  p2_landing.html  p3_form.html
sem1/wai_hih_proj1_strona/css/: style_colors.css  style_header.css  style_main.css  style_mobile.css  style_pc.css
sem1/wai_hih_proj1_strona/javascript/: comment.js  js_on_setup.js  light_dark_toggle.js  menu_toggle.js  tgc.js
sem2/os/: dsk.sh  msk10.sh  msk20.sh  msk30.sh  myls.c  script.man
sem2/po/po_proj1/: CMakeLists.txt  List2d.h  Map.cpp  Map.h  Organism.cpp  Organism.h  ProgOb_P1.cpp  README.md  Simulator.cpp  Simulator.h  World.cpp  World.h  config.h  conio2.h  constants.h  drawing.cpp  drawing.h  misc.cpp  misc.h  world_organism_map.cpp  world_organism_map.h
sem2/po/po_proj1/Animals/: Animal.cpp  Animal.h  Human.cpp  Human.h
sem2/po/po_proj1/Animals/Animals_subclasses/: Antelope.cpp  Antelope.h  Fox.cpp  Fox.h  Sheep.cpp  Sheep.h  Turtle.cpp  Turtle.h  Wolf.cpp  Wolf.h
sem2/po/po_proj1/Plants/: Plant.cpp  Plant.h
sem2/po/po_proj1/Plants/Plants_subclasses/: Dandellion.cpp  Dandellion.h  Grass.cpp  Grass.h  Guarana.cpp  Guarana.h  Nightshade.cpp  Nightshade.h  Pine_Borscht.cpp  Pine_Borscht.h
sem2/po/po_proj3/: Fox.py  (+19 more)
sem3/ako/: README.md
sem3/jpr/: jpr_lab1_ada.adb  jpr_lab2_smalltalk.txt
sem4/macos/: swift_lab1.txt  swift_lab2.txt  swift_lab3.txt  swift_lab4.txt  swift_lab5.txt
(+340 files in other folders)
